# mindstream

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.toml  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/mindstream/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  data_hub.py  events.py  frequency.py  indicators.py  ui.py  visualizer.py
src/mindstream/themes/: default.json
src/mindstream/ui/: __init__.py  base.py  frequency_bar.py  indicator.py  power_trend.py  slider.py  toolbar.py  view_manager.py
src/mindstream/windows/: __init__.py  base.py  main_window.py  sub_window.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_frequency.py  test_ui.py
